--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -3,8 +3,8 @@
   <div class="card__body">
     <%= link_to prototype.title, prototype_path(prototype.id), class: :card__title%>
     <p class="card__summary">
-      <%= "prototype.catch_copy" %>
+      <%= prototype.catch_copy %>
     </p>
-    <%= link_to "by prototype.user_name", root_path, class: :card__user %>
+    <%= link_to "by #{prototype.user.name}", root_path, class: :card__user %>
   </div>
 </div>
